# deanslist-sync

./: .gitignore  README.md  extract.py  pyproject.toml  requirements.txt  settings.py
.github/workflows/: codeql-analysis.yml
deanslist_sync/: extract.py  settings.py
tests/: test_deanslist_sync.py
